force-app/main/default/objects/APT_Quote_Rate_Card__c/APT_Quote_Rate_Card__c.object-meta.xml
<CustomObject>
    <label>Quote Rate Card</label>
    <nameField>
        <displayFormat>QR-{0000}</displayFormat>
        <label>Quote Rate Card Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Rate Card</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>