force-app/main/default/objects/APT_Quote_Rate_Card__c/fields/APT_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>APT_Line_Item__c</fullName>
    <label>Line Item</label>
    <referenceTo>Apttus_Config2__LineItem__c</referenceTo>
    <relationshipLabel>Quote Rate Card</relationshipLabel>
    <relationshipName>Quote_Rate_Card</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>