force-app/main/default/objects/APT_Quote_Rate_Card__c/fields/APT_Value_2__c.field-meta.xml
<CustomField>
    <fullName>APT_Value_2__c</fullName>
    <label>Value 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>