force-app/main/default/objects/APT_Quote_Rate_Card__c/fields/APT_Value_3__c.field-meta.xml
<CustomField>
    <fullName>APT_Value_3__c</fullName>
    <label>Value 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>